tests/snapshots/uf5-218_first_10/tests__uf50-04.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = false
var 4 = true
var 5 = true
var 6 = false
var 7 = false
var 8 = true
var 9 = true
var 10 = true
var 11 = false
var 12 = true
var 13 = true
var 14 = false
var 15 = false
var 16 = false
var 17 = true
var 18 = false
var 19 = false
var 20 = false
var 21 = true
var 22 = false
var 23 = true
var 24 = true
var 25 = true
var 26 = false
var 27 = true
var 28 = false
var 29 = false
var 30 = false
var 31 = true
var 32 = false
var 33 = false
var 34 = false
var 35 = true
var 36 = false
var 37 = false
var 38 = true
var 39 = false
var 40 = false
var 41 = true
var 42 = false
var 43 = false
var 44 = true
var 45 = false
var 46 = true
var 47 = false
var 48 = true
var 50 = false

----- stderr -----

Interactions
  Total           67_081_818
    Depth         34_444_883
    Breadth                1
  Annihilate      37_889_771
  Commute             91_626
  Copy             6_400_093
  Erase            7_656_921
  Expand           5_334_313
  Call             6_144_831
  Branch           3_564_263

Memory
  Heap               542_672 B
  Allocated    1_487_088_848 B
  Freed        1_487_088_848 B

[Performance...]
