tests/snapshots/uf5-218_first_10/tests__uf50-06.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = false
var 4 = true
var 5 = false
var 6 = true
var 8 = false
var 9 = false
var 10 = false
var 11 = false
var 12 = false
var 13 = true
var 14 = true
var 15 = true
var 16 = true
var 17 = true
var 18 = false
var 19 = false
var 20 = false
var 21 = false
var 22 = true
var 23 = true
var 24 = false
var 25 = true
var 26 = false
var 27 = false
var 28 = false
var 29 = true
var 30 = true
var 31 = true
var 32 = false
var 33 = false
var 34 = true
var 35 = true
var 36 = false
var 37 = true
var 38 = true
var 39 = true
var 40 = true
var 41 = true
var 42 = true
var 43 = true
var 44 = true
var 45 = false
var 46 = true
var 47 = false
var 48 = true
var 49 = false
var 50 = false

----- stderr -----

Interactions
  Total            4_854_456
    Depth          2_193_233
    Breadth                2
  Annihilate       2_714_134
  Commute             18_830
  Copy               492_539
  Erase              555_438
  Expand             375_593
  Call               446_874
  Branch             251_048

Memory
  Heap               479_136 B
  Allocated      107_880_144 B
  Freed          107_880_144 B

[Performance...]
