tests/snapshots/uf5-218_first_10/tests__uf50-07_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total            8_010_891
    Depth          3_562_125
    Breadth                2
  Annihilate       4_502_422
  Commute             24_916
  Copy               791_955
  Erase              914_479
  Expand             625_561
  Call               735_190
  Branch             416_368

Memory
  Heap               578_448 B
  Allocated      178_128_752 B
  Freed          178_128_752 B

[Performance...]
